@@ -31,6 +31,11 @@
 
 #include <sys/types.h>
 
+// pid_t isn't defined by the stdlibs that ship with MSVC.
+#if defined (_WIN32) && defined(_MSC_VER)
+typedef int pid_t;
+#endif
+
 
 namespace lyx {
 namespace support {
